--- a/index.html
+++ b/index.html
@@ -288,12 +288,12 @@
                 </div>
             </div>
             <div class="row gx-1">
-                <div class="col-md-5 mt-5 me-5">
+                <div class="col-md-6 mt-5 ">
                     <figure>
-                        <img src="imgs/elearn2.jpeg" alt="" class="rounded-4 shadow">
+                        <img src="imgs/elearn2.jpeg" alt="" class="img-fluid rounded-4 shadow">
                     </figure>
                 </div>
-                <div class="col-md-6 mt-5 ms-5">
+                <div class="col-md-5 mt-5">
                     <p>Welcome to Renova, the leading destination for transformative online learning. Our mission is to empower individuals around the globe to unlock their full potential and achieve their personal and professional goals through accessible and engaging e-learning experiences.</p>
                     <p>At Renova, we believe that education has the power to transform lives and shape a better future. We are committed to breaking down barriers to education by providing a platform that offers a wide range of high-quality courses taught by expert instructors. Whether you're a lifelong learner, a working professional, or a student seeking supplemental education, Renova is here to inspire and guide you on your learning journey.</p>
                     <p>Renova offers a diverse catalog of courses across a wide range of subjects, including technology, business, arts and design, personal development, and much more. Whether you're looking to master programming languages, enhance your leadership skills, explore creative arts, or delve into the fascinating world of data science, Renova has the courses to meet your needs.</p>
